# kasp_client_server

client_server_kasp/: .gitignore  CMakeLists.txt  ReadMe.md  Readme.md
client_server_kasp/config/: patterns.json
client_server_kasp/example/: large_file.txt  patterns.json  small_safe.txt
client_server_kasp/include/client/: Client.h
client_server_kasp/include/network/: Protocol.h  Socket.h
client_server_kasp/include/server/: ClientHandler.h  Config.h  Server.h
client_server_kasp/scripts/: generate_large_file_with_virus.py
client_server_kasp/src/client/: Client.cpp  main.cpp
client_server_kasp/src/network/: Socket.cpp
client_server_kasp/src/server/: ClientHandler.cpp  Config.cpp  Server.cpp  main.cpp
client_server_kasp/src/stats/: StatsUtil.cpp
client_server_kasp/tests/: unit_tests.cpp
